run shell-operator

--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -25,6 +25,14 @@ spec:
               mountPath: /var/run/docker.sock
             - name: work
               mountPath: /home/ubuntu/work
+        - name: shell-operator
+          image: k3d-registry:5000/defn/dev:latest
+          imagePullPolicy: Always
+          command: ["/usr/bin/tini", "--"]
+          args: ["/start.sh", "/shell-operator"]
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsUser: 0
         - name: redis
           image: redis:7.0.2
       volumes:
