--- a/k/vc1/nginx.yaml
+++ b/k/vc1/nginx.yaml
@@ -15,3 +15,14 @@ spec:
       containers:
       - name: nginx
         image: nginx:latest
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+  selector:
+    app: nginx
