ingres to vcluster working

--- a/k/vc/vc1.yaml
+++ b/k/vc/vc1.yaml
@@ -36,6 +36,7 @@ metadata:
   name: vc1
   namespace: vc1
   annotations:
+    traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: vc1-strip-vcluster@kubernetescrd
 spec:
