no more port forwards

--- a/k/argocd/main.yaml
+++ b/k/argocd/main.yaml
@@ -9441,6 +9441,11 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+data:
+  resource.customizations.health.networking.k8s.io_Ingress: |
+    hs = {}
+    hs.stats = "Healthy"
+    return hs
 ---
 apiVersion: v1
 kind: ConfigMap
