--- a/k/ingress/main.yaml
+++ b/k/ingress/main.yaml
@@ -65,7 +65,7 @@ metadata:
   namespace: traefik
 spec:
   entryPoints:
-  - https604
+  - https605
   routes:
   - kind: Rule
     match: PathPrefix(`/api`)
@@ -77,3 +77,5 @@ spec:
     services:
     - kind: TraefikService
       name: dashboard@internal
+  tls:
+    secretName: default-certificate
