--- a/k/kuma-demo/demo-v2.yaml
+++ b/k/kuma-demo/demo-v2.yaml
@@ -30,9 +30,22 @@ spec:
             - name: REDIS_PORT
               value: "6379"
             - name: APP_VERSION
-              value: "2.0"
+              value: "1.0"
             - name: APP_COLOR
-              value: "#5da36f"
+              value: "#efefef"
           ports:
             - name: http
               containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: demo-app
+  namespace: kuma-demo
+spec:
+  selector:
+    app: demo-app
+  ports:
+  - protocol: TCP
+    appProtocol: http
+    port: 5000
