--- a/k/kuma-demo/demo-v2.yaml
+++ b/k/kuma-demo/demo-v2.yaml
@@ -30,9 +30,9 @@ spec:
             - name: REDIS_PORT
               value: "6379"
             - name: APP_VERSION
-              value: "1.0"
+              value: "2.0"
             - name: APP_COLOR
-              value: "#efefef"
+              value: "#5da36f"
           ports:
             - name: http
               containerPort: 5000
