--- a/k/kuma-demo/demo-v2.yaml
+++ b/k/kuma-demo/demo-v2.yaml
@@ -26,9 +26,9 @@ spec:
           image: "kumahq/kuma-demo"
           env:
             - name: REDIS_HOST
-              value: "redis.kuma-demo.svc.cluster.local"
+              value: "redis_kuma-demo_svc_6379"
             - name: REDIS_PORT
-              value: "6379"
+              value: "80"
             - name: APP_VERSION
               value: "2.0"
             - name: APP_COLOR
