--- a/k/kuma-demo/ingress.yaml
+++ b/k/kuma-demo/ingress.yaml
@@ -15,7 +15,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: demo-app-x-kuma-demo-x-vc2
+            name: demo-app-x-demo1-x-vc2
             port:
               number: 5000
 ---
@@ -35,6 +35,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: demo-app-x-kuma-demo-x-vc3
+            name: demo-app-x-demo1-x-vc3
             port:
               number: 5000
