git pull before updates

--- a/Makefile.site
+++ b/Makefile.site
@@ -44,6 +44,7 @@ images:
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +images --repo=$(repo)
 
 updates:
+	git pull
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +updates --repo=$(repo)
 
 shell:
