--- a/Makefile.site
+++ b/Makefile.site
@@ -33,7 +33,7 @@ sync:
 	argocd --kube-context argocd app wait traefik
 	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
 	argocd --kube-context argocd app wait loft
-	argocd --kube-context argocd app sync vc --local k/loft --assumeYes --prune
+	argocd --kube-context argocd app sync vc --local k/vc --assumeYes --prune
 	argocd --kube-context argocd app wait vc
 
 asdf:
