wait for virtualclusters crd

--- a/Makefile.site
+++ b/Makefile.site
@@ -29,11 +29,12 @@ sync:
 	argocd --kube-context argocd app sync argocd --local k/argocd --assumeYes --prune
 	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
 	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
-	argocd --kube-context argocd app sync vc --local k/vc --assumeYes --prune
 	argocd --kube-context argocd app wait dev
 	argocd --kube-context argocd app wait argocd
 	argocd --kube-context argocd app wait traefik
 	argocd --kube-context argocd app wait loft
+	while true; do if kubectl get crd/virtualclusters.storage.loft.sh; then break; fi; sleep 1; done
+	argocd --kube-context argocd app sync vc --local k/vc --assumeYes --prune
 	argocd --kube-context argocd app wait vc
 
 asdf:
