--- a/Makefile.site
+++ b/Makefile.site
@@ -130,6 +130,7 @@ argocd: k/argocd/main.yaml
 
 argocd-admin:
 	@kubectl -n argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d' | ssh super pbcopy
+	@xdg-open https://crouching.tiger-mamba.ts.net:603
 
 k/argocd/main.yaml:
 	curl -sSL -o $@ https://raw.githubusercontent.com/argoproj/argo-cd/v2.4.0/manifests/install.yaml
