--- a/Makefile.site
+++ b/Makefile.site
@@ -6,22 +6,21 @@ dev:
 	-git pull
 	@if flock -n ~/.home.lock -c '~/bin/e $(MAKE) init'; then true; fi
 
-dev_inner:
-	@while true; do if ~/bin/e $(MAKE) live 2>/dev/null >/dev/null; then ~/bin/e $(MAKE) up; fi; echo "$$(date) zzz"; sleep 5 ; done
-
 init:
 	sudo chown ubuntu:ubuntu /var/run/docker.sock work
-	cd .password-store && git crypt unlock
+	cd ~/.password-store && git crypt unlock
 	pass hello
-	-git clone git@github.com:defn/dev work/dev
 	$(MAKE) kubeconfig
+	$(MAKE) init-site
+	tilt up --context pod
+
+init-site:
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl -n argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
 	argocd --kube-context argocd app create dev --repo https://github.com/defn/dev --path k/dev --dest-namespace default --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd --kube-context argocd app create argocd --repo https://github.com/defn/dev --path k/argocd --dest-namespace argocd --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd --kube-context argocd app create traefik --repo https://github.com/defn/dev --path k/traefik --dest-namespace traefik --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd --kube-context argocd app create loft --repo https://github.com/defn/dev --path k/loft --dest-namespace loft --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	-$(MAKE) sync
-	tilt up --context pod
 
 sync:
 	argocd --kube-context argocd app sync dev --local k/dev --assumeYes --prune
