--- a/k/site/ingress-kuma-demo.yaml
+++ b/k/site/ingress-kuma-demo.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ts-demo-v2
+  name: ts-v2-kuma-demo-app
   namespace: vc2
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
@@ -22,7 +22,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ts-demo-v3
+  name: ts-v3-kuma-demo-app
   namespace: vc3
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
