--- a/k/site/ingress.yaml
+++ b/k/site/ingress.yaml
@@ -2,6 +2,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  name: ts-vault
+  namespace: vault
+  annotations:
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    traefik.ingress.kubernetes.io/router.entrypoints: https600
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: vault
+                port:
+                  number: 8200
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
   name: ts-loft
   namespace: loft
   annotations:
