--- a/k/argocd/kustomization.yaml
+++ b/k/argocd/kustomization.yaml
@@ -5,3 +5,6 @@ helmCharts:
   repo: https://argoproj.github.io/argo-helm
   valuesInline:
   includeCRDs: true
+
+patchesStrategicMerge:
+- configmap-argocd-cm.yaml
